--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,11 +39,15 @@ android {
     }
 }
 
+kapt {
+    generateStubs = true
+}
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     compile 'io.reactivex:rxkotlin:0.60.0'
     compile 'io.reactivex:rxandroid:1.2.0'
     compile 'info.android15.nucleus:nucleus:3.0.1'
@@ -53,7 +57,11 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-jackson:2.0.2'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
     compile 'com.karumi:dexter:2.2.2'
+    compile 'com.github.grandstaish.paperparcel:paperparcel:1.0.0'
+    compile 'com.github.grandstaish.paperparcel:paperparcel-kotlin:1.0.0'
+    kapt 'com.github.grandstaish.paperparcel:compiler:1.0.0'
 }
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
